WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213413
REGRESSION (
r263253
): Search field results and cancel buttons have their own focus rings
https://bugs.webkit.org/show_bug.cgi?id=213413
Summary
REGRESSION (r263253): Search field results and cancel buttons have their own ...
Wenson Hsieh
Reported
2020-06-19 16:11:24 PDT
SSIA
Attachments
Patch
(6.49 KB, patch)
2020-06-19 16:50 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-06-19 16:11:51 PDT
<
rdar://problem/64548419
>
Wenson Hsieh
Comment 2
2020-06-19 16:50:20 PDT
Created
attachment 402348
[details]
Patch
Wenson Hsieh
Comment 3
2020-06-19 17:43:45 PDT
Committed
r263303
: <
https://trac.webkit.org/changeset/263303
>
Wenson Hsieh
Comment 4
2020-06-19 17:50:48 PDT
I fixed the macOS failures in the new version of the patch, but it looks like the test might need to be further adjusted to make it work on windows too, where it's not covering the search and cancel buttons as intended :( I'll track this in <
https://bugs.webkit.org/show_bug.cgi?id=213422
>...
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug